<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/light_grey"
        android:padding="10dp"
        android:textSize="48sp"
        android:gravity="end|bottom"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/seven"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/eight"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:text="@string/nine"
            android:layout_margin="2dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnDiv"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:layout_height="match_parent"
            android:text="@string/div"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/four"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/five"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:text="@string/six"
            android:layout_margin="2dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnMul"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:layout_height="match_parent"
            android:text="@string/multi"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/one"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/two"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:text="@string/three"
            android:layout_margin="2dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnSub"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:layout_height="match_parent"
            android:text="@string/minus"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/dot"
            android:layout_margin="2dp"
            android:onClick="onDecimalPoint"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/zero"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnClr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/ac"
            android:layout_margin="2dp"
            android:onClick="onClear"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:text="@string/plus"
            android:layout_margin="2dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/equal"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_weight="2"/>

    </LinearLayout>


</LinearLayout>